--- a/resume.html
+++ b/resume.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" type="text/css" />
@@ -42,61 +42,48 @@
     </header>
     <section class="container-fluid">
         <div class="row row-table">
-            <div class="col-xs-12 col-sm-12 col-md-4 bg-color-personal-info section-column">
+            <div class="col-xs-12 col-sm-12 col-md-4 bg-color-work-history section-column">
                 <div class="row">
                     <div class="col-md-12">
-                        <h3 class="section-heading uppercase">Personal Info</h3>
+                        <h3 class="history-heading uppercase">Work History</h3>
                     </div>
                 </div>
-                <div class="personal-info-item">
-                    <div class="key">
-                        <p class="uppercase"><b>Name:</b></p>
+                <div class="history-items">
+                    <div class="timeline-item" dates="02/1998 - 04/2004">
+                        <h4>National College of Art and Design (NCAD)</h4>
+                        <p>Sculptor in residence</p>
                     </div>
-                    <div class="value">
-                        <p>Stuart Middleton</p>
+                    <div class="timeline-item" dates="04/2004 - 06" /2008>
+                        <h4>Fisher and Diaz Funeral Directors</h4>
+                        <p>Junior Embalmer</p>
                     </div>
-                </div>
-                <div class="personal-info-item">
-                    <div class="key">
-                        <p class="uppercase"><b>Address:</b></p>
+                    <div class="timeline-item" dates="06/2008 - 06/2011">
+                        <h4>Phantom Design Inc Dublin</h4>
+                        <p>Junior Front End Developer</p>
                     </div>
-                    <div class="value">
-                        <p>9 Chelmarsh Close, Chellaston, Derby. UK</p>
-                    </div>
-                </div>
-                <div class="personal-info-item">
-                    <div class="key">
-                        <p class="uppercase"><b>Phone Number:</b></p>
-                    </div>
-                    <div class="value">
-                        <p>07770 123456</p>
-                    </div>
-                </div>
-                <div class="personal-info-item">
-                    <div class="key">
-                        <p class="uppercase"><b>Email:</b></p>
-                    </div>
-                    <div class="value">
-                        <p>stuart.middleton@xyz.com</p>
+                    <div class="timeline-item" dates="06/2001 - Present">
+                        <h4>Hooli Inc. Silicon Valley</h4>
+                        <p>Full Stack Developer</p>
                     </div>
                 </div>
             </div>
+
             <div class="col-xs-12 col-sm-12 col-md-8 bg-color-three-reasons section-column">
                 <div class="row">
                     <div class="col-md-12">
-                        <h3 class="section-heading uppercase">About me</h3>
+                        <h3 class="section-heading uppercase">My Skills</h3>
                     </div>
                 </div>
                 <div class="row">
                     <div class="col-xs-10 col-xs-offset-1 col-sm-offset-0 col-sm-4 col-md-6">
                         <div class="row">
                             <div class="col-xs-2 col-sm-2 col-md-2">
-                                <i class="three-reasons-icons fa fa-question" aria-hidden="true"></i>
+                                <i class="three-reasons-icons fa fa-tv" aria-hidden="true"></i>
                             </div>
                             <div class="col-xs-10 col-sm-10">
-                                <h4 class="three-reasons-heading uppercase">What do I do?</h4>
+                                <h4 class="three-reasons-heading uppercase">Front End</h4>
                                 <p>
-                                    Im a dedicated hardworking student currently studying Full Stack Web Development.
+                                    Im skilled in User Experience Design using the trinity of HTML/CSS/Javascript. I also have extensive experience in Front End Frameworks such as Angular and React.
                                 </p>
                             </div>
                         </div>
@@ -104,32 +91,49 @@
                     <div class="col-xs-10 col-xs-offset-1 col-sm-offset-0 col-sm-4 col-md-6">
                         <div class="row">
                             <div class="col-xs-2 col-sm-2 col-md-2">
-                                <i class="three-reasons-icons fa fa-thumbs-up" aria-hidden="true"></i>
+                                <i class="three-reasons-icons fa fa-gears" aria-hidden="true"></i>
                             </div>
                             <div class="col-xs-10 col-sm-10">
-                                <h4 class="three-reasons-heading uppercase">How do I do it?</h4>
+                                <h4 class="three-reasons-heading uppercase">Back End</h4>
                                 <p>
-                                    I have a logical and methodical thought process that allows me to effectivley communicate my design ideas to enhance the user interface
-                                </p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-xs-10 col-xs-offset-1 col-sm-offset-0 col-sm-4 col-md-6">
-                        <div class="row">
-                            <div class="col-xs-2 col-sm-2 col-md-2">
-                                <i class="three-reasons-icons fa fa-bolt" aria-hidden="true"></i>
-                            </div>
-                            <div class="col-xs-10 col-sm-10">
-                                <h4 class="three-reasons-heading uppercase">Why hire me?</h4>
-                                <p>
-                                    Im an excellent communicator both verbally and graphically, a dynamic, strong team player, im able to add value to a diverse and enthustiatic team
+                                    I specialize in data-driven web application. Many of my projects utilise document-based data. I use Python and Django in conjunction with MongoDB to process and present information.
                                 </p>
                             </div>
                         </div>
                     </div>
                 </div>
-            </div>
-        </div>
+                <div class="row progress-section">
+                    <div class="progress">
+                        <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width:90%">
+                            <span class="sr-only"> 90% complete</span>
+                        </div>
+                        <span class="progress-type">HTML / HTML5</span>
+                    </div>
+                    <div class="progress">
+                        <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width:80%">
+                            <span class="sr-only"> 80% complete</span>
+                        </div>
+                        <span class="progress-type">CSS / CSS3</span>
+                    </div>
+                    <div class="progress">
+                        <div class="progress-bar progress-bar-info" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width:70%">
+                            <span class="sr-only"> 70% complete</span>
+                        </div>
+                        <span class="progress-type">JavaScript / jQuery</span>
+                    </div>
+                    <div class="progress">
+                        <div class="progress-bar progress-bar-warning" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width:80%">
+                            <span class="sr-only"> 80% complete</span>
+                        </div>
+                        <span class="progress-type">Python / Django</span>
+                    </div>
+                    <div class="progress">
+                        <div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width:80%">
+                            <span class="sr-only"> 80% complete</span>
+                        </div>
+                        <span class="progress-type">SQL / NoSQL</span>
+                    </div>
+                </div>
     </section>
     <footer class="container-fluid">
         <div class="row">
