--- a/resume.html
+++ b/resume.html
@@ -6,8 +6,8 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.1.1/css/hover-min.css" type="text/css" />
     <link rel="stylesheet" href="assets/css/style.css" type="text/css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 </head>
-
 <body>
     <header class="container-fluid">
         <div class="row">
@@ -30,10 +30,10 @@
                             <a href="resume.html" class="hvr-sweep-to-bottom"><i class="fa fa-graduation-cap" aria-hidden="true"></i><span>Resume</span></a>
                         </li>
                         <li class="col-xs-6 col-sm-3 ui-menu-color-contact menuitem">
-                            <a href="#" class="hvr-sweep-to-bottom"><i class="fa fa-commenting" aria-hidden="true"></i><span>Contact</span></a>
+                            <a href="contact.html" class="hvr-sweep-to-bottom"><i class="fa fa-commenting" aria-hidden="true"></i><span>Contact</span></a>
                         </li>
                         <li class="col-xs-6 col-sm-3 ui-menu-color-download menuitem">
-                            <a href="#" class="hvr-sweep-to-bottom"><i class="fa fa-download" aria-hidden="true"></i><span>Download CV</span></a>
+                            <a href="assets/CV/SJMCV.pdf" target="_blank" class="hvr-sweep-to-bottom"><i class="fa fa-download" aria-hidden="true"></i><span>Download CV</span></a>
                         </li>
                     </ul>
                 </div>
@@ -67,7 +67,6 @@
                     </div>
                 </div>
             </div>
-
             <div class="col-xs-12 col-sm-12 col-md-8 bg-color-three-reasons section-column">
                 <div class="row">
                     <div class="col-md-12">
@@ -147,7 +146,7 @@
                 <h5 class="uppercase general-sub">Download My CV</h5>
                 <p class="inline-block">
                     Need a printable version of my CV? Download it here.
-                    <a href="#" class="cv-pdf"><i class="fa fa-download" aria-hidden="true"></i></a>
+                    <a href="assets/CV/SJMCV.pdf" target="_blank" class="cv-pdf"><i class="fa fa-download" aria-hidden="true"></i></a>
                 </p>
             </div>
             <div class="col-sm-4">
